syntax = "proto3";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Sane4eck55/CART-LOMS-COMMENTS-NOTIFIER/comments/pkg/api/comments/v1;comments";

service Comments {
    rpc CommentAdd (CommentAddRequest) returns (CommentAddResponse) {
        option (google.api.http) = {
            post: "/comment/add"
            body: "*"
        };
    }

    rpc CommentGetByID (CommentGetByIDRequest) returns (CommentGetByIDResponse) {
        option (google.api.http) = {
            post: "/comment/get-by-id"
             body: "*"
        };
    }

    rpc CommentEdit (CommentEditRequest) returns (CommentEditResponse) {
        option (google.api.http) = {
            post: "/comment/edit"
            body: "*"
        };
    }

    rpc CommentListBySku (CommentListBySKURequest) returns (CommentListBySKUResponse) {
        option (google.api.http) = {
            post: "/comment/list-by-sku"
            body: "*"
        };
    }

    rpc CommentListByUser (CommentListByUserRequest) returns (CommentListByUserResponse) {
        option (google.api.http) = {
            post: "/comment/list-by-user"
            body: "*"
        };
    }
}

message CommentAddRequest {
    int64 user_id = 1 [json_name = "user_id", (validate.rules).int64.gt = 0];
    int64 sku = 2 [json_name = "sku", (validate.rules).int64.gt = 0];
    string comment = 3 [json_name = "comment", (validate.rules).string = {min_len: 1, max_len: 255}];
}

message CommentAddResponse{
    int64 id = 1;
}

message CommentGetByIDRequest{
    int64 id = 1 [json_name = "id", (validate.rules).int64.gt = 0];  
}

message CommentGetByIDResponse{
    int64 id = 1;
    int64 user_id = 2;
    int64 sku = 3;
    string comment = 4;
    google.protobuf.Timestamp created_at = 5;
}

message CommentEditRequest{
    int64 user_id = 1 [json_name = "user_id", (validate.rules).int64.gt = 0];
    int64 comment_id = 2 [json_name = "comment_id", (validate.rules).int64.gt = 0];
    string new_comment = 3 [json_name = "new_comment", (validate.rules).string = {min_len: 1, max_len: 255}];
}

message CommentEditResponse{}

message CommentListBySKURequest{
    int64 sku = 1 [json_name = "sku", (validate.rules).int64.gt = 0];
    Cursor cursor = 2;
}

message CommentListBySKUResponse{
    repeated CommentBySku comments = 1;
    Cursor cursor = 2;
}

message Cursor{
    int64 id = 1;
}

message CommentBySku{
    int64 id = 1;
    int64 user_id = 2;
    string comment = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CommentListByUserRequest{
    int64 user_id = 1 [json_name = "user_id", (validate.rules).int64.gt = 0];
}

message CommentListByUserResponse{
   repeated CommentByUserID comments = 1;
}

message CommentByUserID{
    int64 id = 1;
    int64 sku = 2;
    string comment = 3;
    google.protobuf.Timestamp created_at = 4;
}